Mise à jour de README
Détail concernant les variables
Explications d'un exemple chartjs et

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <script src="js/libs/mathjs/math.js" type="text/javascript" defer></script>
     <script src="js/libs/sortable/Sortable.js"></script>
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
+    <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/lib.mathsmentales.js" type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app-container">
 <header>
     <nav>
-        <a id="btnaccueil" href="#tab-accueil" class="logo tabs-menu-link"><img src="img/android-icon-48x48.png" alt="logo" /></a>
+        <a id="btnaccueil" href="#tab-accueil" class="logo tabs-menu-link"><img href="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" /></a>
         <!--<div class="icon-menu"></div>-->
         <ul class="menu color-inverse">
             <li><a href="/">Ecole</a>
