--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <link rel="stylesheet" href="css/knacss.css" type="text/css" />
     <link rel="stylesheet" href="css/bulma-steps.css" type="text/css" />
     <link rel="stylesheet" href="css/mathsmentales.css" type="text/css" />
+    <link rel="stylesheet" href="css/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
-    <script src="js/libs/mathjs/math.js" type="text/javascript" defer></script>
+    <script src="js/libs/asciimath2tex/asciimath2tex.min.js"></script>
+    <script src="js/libs/algebrite/algebrite.bundle-for-browser.js" type="text/javascript" defer></script>
     <script src="js/libs/sortable/Sortable.js"></script>
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
+    <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
+    <script src="js/libs/JSXGraph/JessieScript.js"></script>
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/lib.mathsmentales.js" type="text/javascript" defer></script>
 </head>
@@ -33,29 +37,29 @@
         <a id="btnaccueil" href="#tab-accueil" class="logo tabs-menu-link"><img href="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" /></a>
         <!--<div class="icon-menu"></div>-->
         <ul class="menu color-inverse">
-            <li><a href="/">Ecole</a>
+            <li><a href="#nothing">Ecole</a>
                 <ul>
-                    <li><a href="/?CP">CP</a></li>
-                    <li><a href="/?CE1">CE1</a></li>
-                    <li><a href="/?CE2">CE2</a></li>
-                    <li><a href="/?CM1">CM1</a></li>
-                    <li><a href="/?CM2">CM2</a></li>
+                    <li onclick="library.displayContent(11)">CP</li>
+                    <li onclick="library.displayContent(10)">CE1</li>
+                    <li onclick="library.displayContent(9)">CE2</li>
+                    <li onclick="library.displayContent(8)">CM1</li>
+                    <li onclick="library.displayContent(7)">CM2</li>
                 </ul>
             </li>
-            <li><a href="/">Collège</a>
+            <li><a href="#nothing">Collège</a>
                 <ul>
-                    <li><a href="/?6e">6e</a></li>
-                    <li><a href="/?5e">5e</a></li>
-                    <li><a href="/?4e">4e</a></li>
-                    <li><a href="/?3e">3e</a></li>
+                    <li onclick="library.displayContent(6)">6e</li>
+                    <li onclick="library.displayContent(5)">5e</li>
+                    <li onclick="library.displayContent(4)">4e</li>
+                    <li onclick="library.displayContent(3)">3e</li>
                 </ul>    
             </li>
-            <li><a href="/">Lycée</a>
+            <li><a href="#nothing">Lycée</a>
                 <ul>
-                    <li><a href="/?2nde">2nde</a></li>
-                    <li><a href="/?1ereES1">1ère ES1</a></li>
-                    <li><a href="/?1ereES2">1ère ES2</a></li>
-                    <li><a href="/?Tale">Tale</a></li>
+                    <li onclick="library.displayContent(2)"><a href="/?2nde">2nde</a></li>
+                    <li onclick="library.displayContent(1)"><a href="/?1ereES1">1ère ES1</a></li>
+                    <li onclick="library.displayContent(1)"><a href="/?1ereES2">1ère ES2</a></li>
+                    <li onclick="library.displayContent(0)"><a href="/?Tale">Tale</a></li>
                 </ul>
             </li>
         </ul>
@@ -99,7 +103,7 @@
         <div>
             <button id="addToCart" onclick="MM.addToCart();" title="Ajouter au panier"><img src="img/addtocart.png"></button>
             <button id="removeFromCart" onclick="MM.removeFromCart();" class="hidden" title="Supprimer du panier"><img src="img/burnCart.png"></button>
-            <h1><i class="icon-arrow--right"></i>Activité</h1>
+            <h1><i class="icon-arrow--right"></i>Activité <span id="param-title-act"></span></h1>
             <div id="activityTitle"></div>
             <div id="activityDescription"></div>
             <b>Temps :</b> <span id="tempo-value"></span><br>
@@ -107,14 +111,15 @@
             <b>Nombre de questions :</b> <span id="nbq-value"></span><br>
             <input type="range" id="nbq-slider" min="1" max="20" value="10" oninput="utils.changeNbqValue(this.value);" onchange="MM.carts[MM.selectedCart].display();"><br>
         </div>
-        <div class="row-4">
+        <div id="phantom" class=""></div>
+        <div id="divcarts" class="hidden">
             <div class="tabs">
                 <nav class="tabs-menu" id="cartsMenu">
                     <button onclick="MM.showCart(this.value);" class="tabs-menu-link is-active" value="1" id="button-cart1"><img src="img/cart1.png"></button>
                     <button id="addcart" title="Ajouter un panier" onclick="MM.addCart();"><img src="img/cartadd.png"></button>
                 </nav>
             </div>
-            <div id="cartscontener">
+            <div id="cartscontainer">
                 <section id="cart0" class="cartcontent">
                     <button class="cart-close" onclick="MM.emptyCart(1);" title="Vider le panier"><img src="img/recyclecart.png"></button>
                     <h3 contenteditable="true" onblur="MM.carts[0].title = this.innerHTML;" title="Cliquer pour éditer">Groupe 1</h3>
@@ -164,7 +169,7 @@
                 </section>
             </div>
         </div>
-         <div class="row-4">
+         <div class="row-5">
             <h1><i class="icon-arrow--right"></i>Paramètres</h1>
             <fieldset>
                 <legend>Introduction</legend>
@@ -206,7 +211,7 @@
                 <button class="button--warning" onclick="MM.showAnswers();">Voir des réponses</button> 
             </section>
         </div>
-       <div class="row-3">
+       <div class="row-4 colsx2" id="divparams">
             <h1><i class="icon-arrow--right"></i>Questions types</h1>
             <div id="activityOptions"></div>
         </div>
@@ -224,11 +229,17 @@
         Ici, la section de téléchargement de MathsMentales et ses dérivés.
     </section>
     <section id="tab-chercher" class="tabs-content-item" style="display: none;">
-        <ol id="actlist">
-        </ol>
+
     </section>
 </div>
 </div>
-<div id="slideshow" class="hidden">
+<div id="slideshow-container" class="hidden">
+    <header>
+        <button title="Tout arrêter" id="stop-all" onclick="MM.stopAllSliders()"><img src="img/slider-stop.png"></button>
+        <button title="Tout mettre en pause" id="pause-all" onclick="MM.pauseAllSliders();"><img src="img/slider-pause.png"></button>
+        <button title="Passer à la suivante pour tous" id="next-all" onclick="MM.nextAllSliders()"><img src="img/slider-next.png"></button>
+    </header>
+    <section id="slideshow"></section>
 </div>
 </body>
+</html>
