--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js"></script>
     <script src="js/libs/algebrite/algebrite.bundle-for-browser.js" type="text/javascript" defer></script>
+    <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
     <script src="js/libs/sortable/Sortable.js"></script>
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
     <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
@@ -86,6 +87,9 @@
         </div>
         <div class="alert row-2"><h2>Chaine youtube</h2>
             Toute une série de petites vidéos montrant le fonctionnement de MathsMentales
+            <div class="center">
+                <!--<iframe width="280" height="158" src="https://www.youtube.com/embed/Grm7sle0Bpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+            </div>
         </div>
         <div class="col-2"><img src="img/logocm.png" width="320" style="margin-left: calc(50% - 160px);"></div>
         <div class="alert--primary"><h2>Historique</h2>
@@ -96,7 +100,7 @@
             Vous pouvez aussi télécharger le contenu sur <a href="https://github.com/seb-cogez/mathsmentales">Github</a>
         </div>
         <div class="alert"><h2>Téléchargements</h2>
-            Compléments au site : pages de ceintures de calcul mental, zip du site, etc...
+            Compléments au site : pages de ceintures de calcul mental, <a href="https://github.com/seb-cogez/mathsmentales/archive/master.zip">site complet</a>, etc...
         </div>
     </section>
     <section id="tab-parameters" class="grid-3 has-gutter tabs-content-item" style="display: none;">
@@ -173,9 +177,9 @@
             <h1><i class="icon-arrow--right"></i>Paramètres</h1>
             <fieldset>
                 <legend>Introduction</legend>
-                <input type="radio" class="radio" name="beforeSlider" value="example"> Exemple
-                <input type="radio" class="radio" name="beforeSlider" value="321" checked="true"> Décompte
-                <input type="radio" class="radio" name="beforeSlider" value="nothing"> Rien
+                <span title="Commencer sur un exemple que l'on pourra discuter"><input type="radio" class="radio" name="beforeSlider" value="example"> Exemple</span>
+                <span title="Commener par un décompte 3...2...1..."><input type="radio" class="radio" name="beforeSlider" value="321" checked="true"> Décompte</span>
+                <span title="Commencer directement"><input type="radio" class="radio" name="beforeSlider" value="nothing"> Rien</span>
             </fieldset><br>
             <fieldset>
                 <legend>Enoncé</legend>
@@ -240,6 +244,36 @@
         <button title="Passer à la suivante pour tous" id="next-all" onclick="MM.nextAllSliders()"><img src="img/slider-next.png"></button>
     </header>
     <section id="slideshow"></section>
+</div>
+<div id="countdown-container" class="hidden">
+    <div class="demo">
+        <div class="demo__colored-blocks">
+          <div class="demo__colored-blocks-rotater">
+            <div class="demo__colored-block"></div>
+            <div class="demo__colored-block"></div>
+            <div class="demo__colored-block"></div>
+          </div>
+          <div class="demo__colored-blocks-inner"></div>
+          <div class="demo__text">Prêt</div>
+        </div>
+        <div class="demo__inner">
+          <svg class="demo__numbers" viewBox="0 0 100 100">
+            <defs>
+              <path class="demo__num-path-1" d="M40,28 55,22 55,78"/>
+              <path class="demo__num-join-1-2" d="M55,78 55,83 a17,17 0 1,0 34,0 a20,10 0 0,0 -20,-10"/>
+              <path class="demo__num-path-2" d="M69,73 l-35,0 l30,-30 a16,16 0 0,0 -22.6,-22.6 l-7,7"/>
+              <path class="demo__num-join-2-3" d="M28,69 Q25,44 34.4,27.4"/>
+              <path class="demo__num-path-3" d="M30,20 60,20 40,50 a18,15 0 1,1 -12,19"/>
+            </defs>
+            <path class="demo__numbers-path" 
+                  d="M-10,20 60,20 40,50 a18,15 0 1,1 -12,19 
+                     Q25,44 34.4,27.4
+                     l7,-7 a16,16 0 0,1 22.6,22.6 l-30,30 l35,0 L69,73 
+                     a20,10 0 0,1 20,10 a17,17 0 0,1 -34,0 L55,83 
+                     l0,-61 L40,28" />
+          </svg>
+        </div>
+      </div>
 </div>
 </body>
 </html>
