Gestion des questions multiples dans le cas d'option non choisie, modif de 6NA1

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
         </div>
     </section>
     <section id="tab-corrige" class="tabs-content-item" style="display: none;">
-        <div id="corrige-content" class="grid"></div>
+        <div id="corrige-content" class="grid">
+            Ici s'affichent les corrigés du diaporama
+        </div>
     </section>
     <section id="tab-historique" class="tabs-content-item" style="display: none;">
         Ici, l'historique des exercices pour impression, copie/coller d'image, etc.
@@ -235,7 +237,7 @@
         Ici, la section de téléchargement de MathsMentales et ses dérivés.
     </section>
     <section id="tab-chercher" class="tabs-content-item" style="display: none;">
-
+        Ici un mini moteur de recherche pour trouver une activité
     </section>
 </div>
 </div>
