Ajout d'un petit moteur de recherche

--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
         Ici, la section de téléchargement de MathsMentales et ses dérivés.
     </section>
     <section id="tab-chercher" class="tabs-content-item" style="display: none;">
+        <input type="text" onkeyup="library.displayContent(this.value)" placeholder="Mot clé (au moins 3 caractères)" id="searchinput">
+        <div id="resultat-chercher">
         Ici un mini moteur de recherche pour trouver une activité
+        </div>
     </section>
 </div>
 </div>
