--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
     <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
     <script src="js/libs/JSXGraph/JessieScript.js"></script>
+    <script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/lib.mathsmentales.js" type="text/javascript" defer></script>
 </head>
