Ajout de quelques exercices sur les fractions, préparation de l'impression de feuilles de ceintures

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             <button class="button--primary" onclick="utils.showParameters('paramsdiapo',this)">Diaporama</button>
             <button class="button--info" onclick="utils.showParameters('paramsexos',this)">Feuille d'exercices</button>
             <button class="button--info" onclick="utils.showParameters('paramsinterro',this)">Feuille d'interro</button>
+            <button class="button--info" onclick="utils.showParameters('paramsceinture',this)">Ceintures de CM</button>
             <div id="paramsdiapo">
             <fieldset>
                 <legend>Introduction</legend>
@@ -248,6 +249,19 @@
                 <legend>Titre de chaque exercice</legend>
             </fieldset>
             <fieldset>Clé aléa de l'exercice</fieldset>
+        </div>
+        <div id="paramsceinture" class="hidden">
+            <fieldset>
+                <legend>Format page</legend>
+                A4 / A5 / A6
+            </fieldset>
+            <fieldset>
+                <legend>Titre de la ceinture</legend>
+            </fieldset>
+            <fieldset>
+                <legend>Nb de colonnes</legend>
+            </fieldset>
+            <fieldset>Clé aléa de la ceinture</fieldset>
         </div>
         </div>
        <div class="row-4 colsx2" id="divparams">
