Ajout de la possibilité de répondre en ligne. à améliorer

--- a/index.html
+++ b/index.html
@@ -217,9 +217,10 @@
                 <input type="radio" class="radio" name="endOfSlideRadio" value="list"> Énoncés
             </fieldset><br>
             <section class="txtcenter" id="startbuttons">
-                <button class="button--info" onclick="MM.showQuestions();">Voir des énoncés</button>
-                <button class="button--warning" onclick="MM.showAnswers();">Voir des réponses</button> 
+                <button class="button--info" onclick="MM.showQuestions();">Énoncés</button>
+                <button class="button--warning" onclick="MM.showAnswers();">Réponses</button> 
                 <button class="button--primary" onclick="MM.start();">C'est parti !</button>
+                <button class="button--primary" onclick="MM.online();">Sur l'ordi !</button>
             </section>
         </div>
         <div id="paramsexos" class="hidden">
