--- a/pagetoprint.html
+++ b/pagetoprint.html
@@ -15,7 +15,7 @@
     <body>
         <div id="creator-container">
             <section id="creator-menu">
-                <button onclick="window.parent.MM.creatorClose();">Close</button> <button onclick="window.print();">Print</button>Pour exporter en PDF, sur chrome, imprimer et choisir pdf, sur firefox (windows)
+                <button onclick="window.print();">Print</button> vous pouvez imprimer en PDF
             </section>
             <section id="creator-content">
             
