Ajout de 3 activités et préparation cartes flash

--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
         </div>
         <div id="paramsflashcards" class="hidden">
             <fieldset>
-                <legend>Titre de la carte</legend>
-                <input type="text" placeholder="Je retiens les..." id="ceinttitle">
+                <legend>Titre de la page</legend>
+                <input type="text" placeholder="Je retiens les..." id="FCtitle">
             </fieldset>
             <fieldset>
-                <legend>Nb de cartes : <span id="FCnb" class="blue">4</span></legend>
+                <legend>Nb de cartes : <span id="FCnb" class="blue">16</span></legend>
                 <input type="range" min="5" max="40" step="1" value="16" oninput="document.getElementById('FCnb').innerHTML=this.value;">
             </fieldset>
             <section>
