--- a/pagetoprint.html
+++ b/pagetoprint.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="css/print.css" type="text/css" />
         <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="css/jsxgraph.css" type="text/css" />
+        <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
+        <script src="js/libs/JSXGraph/JessieScript.js"></script>
+        <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     </head>  
     <body>
         <div id="creator-container">
